report.txt
Describes the input you provided in step 5 and each of the errors you introduced into the logic_error.cpp and compile_error.cpp programs. Briefly discuss any error messages the compiler reported, and incorrect, unusual, or nonsensical results. This report may well end up being much less than a page long.

To ensure the code worked, I first ran ./original with 50 voters, 15 of whom say they will vote for Newsom and 35 of whom say they will vote for Cox. The output was correct:
	30.0% say they will vote for Newsom. 
	70.0% say they will vote for Cox.
	Cox is predicted to win the election.

I then ran the code with integers that would produce "nonsensical" output: 50 voters, 60 of whom are planning to vote for Newsom, and 30 of whom are planning to vote for Cox. The output was nonsensical:
	120.0% say they will vote for Newson.
	60% say they will vote for Cox.
	Newsom is predicted to win the election.

The logic error introduced into logic_error.cpp was an incorrect "<" in line 30 that causes the program to incorrectly predict Newson to win the election, even though Newsom has less votes than Cox. The error is in the if/else statement. An input of 50, 10, 40 gives:
	20.0% say they will vote for Newsom.
	80.0% say they will vote for Cox.
	Newsom is predicted to win the election.

I introduced two compile errors into compile_error.cpp: The first mistake is not defining "numberSurveyed" in line 11:
	compile_error.cpp:16:6: error: expected ';' before 'cin'
		cin >> numberSurveyed;
		^~~
The second mistake is "forgetting" the semicolon at the end of line 15:
	compile_error.cpp:22:45: error: ‘numberSurveyed’ was not declared in this scope
      		double pctNewsom = 100.0 * forNewsom / numberSurveyed;
						       ^~~~~~~~~~~~~~ 	
